--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ backend/scripts/add_additional_courses.js
 backend/scripts/update_courses.js
 backend/scripts/fetch_*.js
 backend/scripts/export_courses_to_sql.js
+
+# Environment variables - keep API keys secure
+.env
+backend/.env
