--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ backend/fix_sql.js
 # Environment variables - keep API keys secure
 .env
 backend/.env
+
+# Docker files (optional - uncomment if you don't want to track these)
+# docker-compose.override.yml
+# .dockerignore
+
+# Production builds
+dist/
+build/
