--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.cjs",
     "dev": "node server.cjs",
+    "setup-db": "node setup-database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
