--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -20,9 +20,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* React */
+    "types": ["react", "react-dom"]
   },
-  "include": ["src"]
+  "include": ["src", "src/**/*"]
 }
