Add postinstall script to fix Render deployment - Express module not found error
- Add postinstall script that automatically installs frontend and backend dependencies
- Ensures Express and other backend dependencies are available when Render starts the backend
- Fixes 'Cannot find module express' error on Render deployment
- Automatically runs after npm install in root directory

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm install && npm run build",
     "start": "cd backend && npm start",
-    "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+    "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "postinstall": "cd frontend && npm install && cd ../backend && npm install"
   },
   "keywords": ["brown", "courses", "catalog", "ai", "recommendations"],
   "author": "",
