--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "lucide-react": "^0.539.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "serve": "^14.2.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
