--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node server.cjs",
     "dev": "node server.cjs",
     "setup-db": "node setup-database.js",
+    "populate-courses": "node scripts/populate-courses.js",
     "deploy": "node deploy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
