--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "dev": "node server.cjs",
     "setup-db": "node setup-database.js",
     "populate-courses": "node scripts/populate-courses.js",
+    "debug": "node scripts/debug-backend.js",
+    "test-api": "node scripts/test-api-endpoints.js",
     "deploy": "node deploy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
