--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        sync: false
+        value: postgresql://bruno_course_catalog_db_user:CzP7vLlYpGUmsfl1yE42SYeSVd2ejDJx@dpg-d2ntiher433s73alehrg-a.ohio-postgres.render.com/bruno_course_catalog_db?sslmode=require
       - key: JWT_SECRET
         sync: false
       - key: OPENAI_API_KEY
