--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,9 @@ services:
       - key: DATABASE_URL
         value: postgresql://bruno_course_catalog_db_user:CzP7vLlYpGUmsfl1yE42SYeSVd2ejDJx@dpg-d2ntiher433s73alehrg-a.ohio-postgres.render.com/bruno_course_catalog_db?sslmode=require
       - key: JWT_SECRET
-        sync: false
+        value: "your-super-secret-jwt-key-for-production"
       - key: OPENAI_API_KEY
-        sync: false
+        value: "sk-dummy-key-for-production-deployment"
 
   # Frontend Static Site
   - type: web
