--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,1 @@
-{
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.cjs",
-    "dev": "node server.cjs",
-    "setup-db": "node setup-database.js",
-    "populate-courses": "node scripts/populate-courses.js",
-    "debug": "node scripts/debug-backend.js",
-    "test-api": "node scripts/test-api-endpoints.js",
-    "deploy": "node deploy.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
-    "express-rate-limit": "^8.0.1",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
-    "openai": "^5.15.0",
-    "pg": "^8.16.3",
-    "puppeteer": "^24.16.2"
-  }
-}
+{"name":"brown-course-catalog-api","version":"1.0.0","dependencies":{"pg":"^8.11.3","bcrypt":"^5.1.1","jsonwebtoken":"^9.0.2","dotenv":"^16.3.1"}}
