--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,20 @@
-{"name":"brown-course-catalog-api","version":"1.0.0","dependencies":{"pg":"^8.11.3","bcrypt":"^5.1.1","jsonwebtoken":"^9.0.2","dotenv":"^16.3.1"}}
+{
+  "name": "brown-course-catalog-api",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server-local.cjs",
+    "dev": "node server-local.cjs",
+    "vercel-dev": "vercel dev"
+  },
+  "dependencies": {
+    "pg": "^8.11.3",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "cookie-parser": "^1.4.6"
+  }
+}
