Integrate CORS middleware pattern across all API endpoints - Convert to ES modules - Simplify database connection - Apply consistent CORS handling to courses, signup, login, me, logout endpoints

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brown-course-catalog-api",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "node server-local.cjs",
     "dev": "node server-local.cjs",
