--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.6"
   },
   "engines": {
     "node": ">=18.0.0"
