--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brown-course-catalog",
+  "name": "brown-course-catalog-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
-    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -31,20 +24,19 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "description": "Frontend for Brown University Course Catalog",
   "main": "eslint.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/William-Liangg/brown-course-catalog.git"
   },
-  "keywords": [],
+  "keywords": ["brown", "courses", "catalog", "frontend", "react"],
   "author": "",
   "license": "ISC",
   "bugs": {
