--- a/package.json
+++ b/package.json
@@ -7,23 +7,9 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
-    "setup": "node setup-local-database.cjs",
-    "populate": "node course-populator.cjs",
-    "build": "cd frontend && tsc -b && vite build",
+    "build": "cd frontend && npm run build",
     "lint": "eslint .",
-    "preview": "cd frontend && vite preview"
-  },
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.539.0",
-    "pg": "^8.16.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "preview": "cd frontend && npm run preview"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -43,17 +29,12 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
+  "description": "Brown University Course Catalog - Full-stack web application with AI-powered course recommendations",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/William-Liangg/brown-course-catalog.git"
   },
-  "keywords": [],
+  "keywords": ["brown-university", "course-catalog", "react", "nodejs", "ai"],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/William-Liangg/brown-course-catalog/issues"
-  },
-  "homepage": "https://github.com/William-Liangg/brown-course-catalog#readme"
+  "license": "ISC"
 }
