add build script to backend and update render.yaml to use npm scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node simple-server.cjs",
+    "build": "echo 'Backend build complete'",
     "start": "node simple-server.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
