--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: brown-course-catalog-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && node simple-server.cjs
+    buildCommand: cd backend && npm install && npm run build
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
